<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="275dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_white"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="@dimen/label_margin_bottom"
        android:textSize="@dimen/font_default"
        />

    <EditText
        android:id="@+id/input_email_login"
        style="@style/EditTextStyle"
        android:layout_gravity="center"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:textCursorDrawable="@null"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="@dimen/label_margin_bottom"
        android:textSize="@dimen/font_default"
        />

    <EditText
        android:id="@+id/input_password_login"
        style="@style/EditTextStyle"
        android:layout_gravity="center"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:textCursorDrawable="@null"
        />

    <Button
        android:id="@+id/btn_login_login"
        fontPath="fonts/roboto_regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/layout_rounded_light_blue"
        android:paddingLeft="@dimen/btn_padding_horizontal"
        android:paddingRight="@dimen/btn_padding_horizontal"
        android:text="@string/btn_login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_default"
        tools:ignore="MissingPrefix" />

    <Button
        android:id="@+id/btn_register_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="@dimen/btn_padding_horizontal"
        android:paddingRight="@dimen/btn_padding_horizontal"
        android:text="@string/btn_register"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/font_default"
        android:textAllCaps="false"
        tools:ignore="MissingPrefix"
        android:background="@android:color/transparent"
        />

</LinearLayout>
