<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="275dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:src="@drawable/logo_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:text="@string/last_name_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_default" />

        <EditText
            android:id="@+id/input_last_name_register"
            style="@style/EditTextStyle"
            android:layout_gravity="center"
            android:hint=""
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:text="@string/first_name_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_default" />

        <EditText
            android:id="@+id/input_first_name_register"
            style="@style/EditTextStyle"
            android:layout_gravity="center"
            android:hint=""
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:text="@string/email_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_default" />

        <EditText
            android:id="@+id/input_email_register"
            style="@style/EditTextStyle"
            android:layout_gravity="center"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:text="@string/phone_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_default" />

        <EditText
            android:id="@+id/input_phone_register"
            style="@style/EditTextStyle"
            android:layout_gravity="center"
            android:hint=""
            android:inputType="phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:text="@string/address_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_default" />

        <EditText
            android:id="@+id/input_address_register"
            style="@style/EditTextStyle"
            android:layout_gravity="center"
            android:hint=""
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:text="@string/password_label"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/font_default" />

        <EditText
            android:id="@+id/input_password_register"
            style="@style/EditTextStyle"
            android:layout_gravity="center"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_register_register"
                fontPath="fonts/roboto_regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:background="@drawable/layout_rounded_light_blue"
                android:paddingLeft="@dimen/btn_padding_horizontal"
                android:paddingRight="@dimen/btn_padding_horizontal"
                android:text="@string/btn_login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_default"
                tools:ignore="MissingPrefix" />

            <Button
                android:id="@+id/btn_cancel_register"
                fontPath="fonts/roboto_regular.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:layout_weight="1"
                android:background="@drawable/layout_rounded_light_blue"
                android:paddingLeft="@dimen/btn_padding_horizontal"
                android:paddingRight="@dimen/btn_padding_horizontal"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_default"
                tools:ignore="MissingPrefix" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>