<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize">

            <Button
                android:id="@+id/back"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:adjustViewBounds="true"
                android:background="@drawable/ic_arrow_back_black_24dp" />

            <ImageView
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_marginRight="5dp"
                android:adjustViewBounds="true"
                android:src="@drawable/logo_small" />

        </android.support.v7.widget.Toolbar>

        <ImageView
            android:id="@+id/imageprofile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/change_profile" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/age"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/phone_hint"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/email_hint"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/address_hint"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="20dp"></View>

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/category"
                android:textSize="20sp"
                android:textColor="@color/colorRed"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/description"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>